--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/18/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.4&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.4&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.4&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.5&#176;F</td>
+        <td class="data">53.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.927 inHg (0.012)</td>
+        <td class="data">29.933 inHg (0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:46:21 AM</td>
+          <td class="data">06:47:06 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:08:49 PM</td>
+          <td class="data">07:07:21 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:26:51 PM">
-            89.5</span><br/>
-          <span title="06:56:13 AM">
-            50.8</span>
+          <span title="12:00:04 AM">
+            69.3</span><br/>
+          <span title="12:02:04 AM">
+            69.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:26:51 PM" class="hival">
-            89.5</span>
+          <span title="12:00:04 AM" class="hival">
+            69.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:56:13 AM" class="loval">
-            50.8</span>
+          <span title="12:02:04 AM" class="loval">
+            69.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="08:04:24 PM">
-            55.4</span><br/>
-          <span title="05:31:48 AM">
-            41.4</span>
+          <span title="12:00:04 AM">
+            53.4</span><br/>
+          <span title="12:02:04 AM">
+            53.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:04:24 PM (Thursday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:20:06 AM">
-            80</span><br/>
-          <span title="01:57:57 PM">
-            26</span>
+          <span title="12:00:04 AM">
+            57</span><br/>
+          <span title="12:00:04 AM">
+            57</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="10:37:01 AM">
-            29.970</span><br/>
-          <span title="04:08:01 PM">
-            29.865</span>
+          <span title="12:04:00 AM">
+            29.936</span><br/>
+          <span title="12:00:05 AM">
+            29.926</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:14:52 PM">
-            15</span><br/>
-          200
+          <span title="12:01:20 AM">
+            4</span><br/>
+          5
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          3</td>
+          2</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
-          240
+          2<br/>
+          347
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:40:01 PM">
-            77.7</span><br/>
-          <span title="05:43:00 AM">
-            70.6</span>
+          <span title="12:00:04 AM">
+            75.9</span><br/>
+          <span title="12:02:00 AM">
+            75.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="11:50:02 PM">
+          <span title="12:00:04 AM">
             44</span><br/>
-          <span title="01:17:00 AM">
-            37</span>
+          <span title="12:00:04 AM">
+            44</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:50:02 PM (Thursday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 9 hours, 12 minutes</td>
+      <td class="data">16 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 9 hours, 12 minutes</td>
+      <td class="data">16 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
