--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/18/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">89.5<br/>
-            <span class="timestamp">02:26:51 PM</span><br/>
-            50.8<br/>
-            <span class="timestamp">06:56:13 AM</span>
+          <td class="data new_row">69.3<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            69.2<br/>
+            <span class="timestamp">12:02:04 AM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">89.5<br/>
-            <span class="timestamp">02:26:51 PM</span>
+          <td class="data new_row">69.3<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">50.8<br/>
-            <span class="timestamp">06:56:13 AM</span>
+          <td class="data new_row">69.2<br/>
+            <span class="timestamp">12:02:04 AM</span>
           </td>
           <td class="data new_row">46.1<br/>
             <span class="timestamp">06:54:23 AM (Wednesday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">55.4<br/>
-            <span class="timestamp">08:04:24 PM</span><br/>
-            41.4<br/>
-            <span class="timestamp">05:31:48 AM</span>
+          <td class="data new_row">53.4<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            53.3<br/>
+            <span class="timestamp">12:02:04 AM</span>
           </td>
           <td class="data new_row">55.4<br/>
             <span class="timestamp">08:04:24 PM (Thursday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">80<br/>
-            <span class="timestamp">06:20:06 AM</span><br/>
-            26<br/>
-            <span class="timestamp">01:57:57 PM</span>
+          <td class="data new_row">57<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            57<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.970<br/>
-            <span class="timestamp">10:37:01 AM</span><br/>
-            29.865<br/>
-            <span class="timestamp">04:08:01 PM</span>
+          <td class="data new_row">29.936<br/>
+            <span class="timestamp">12:04:00 AM</span><br/>
+            29.926<br/>
+            <span class="timestamp">12:00:05 AM</span>
           </td>
           <td class="data new_row">30.054<br/>
             <span class="timestamp">10:03:01 AM (Tuesday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            15<br/>
-            200<br/>
-            <span class="timestamp">04:14:52 PM</span>
+            4<br/>
+            5<br/>
+            <span class="timestamp">12:01:20 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">3</td>
+          <td class="data new_row">2</td>
           <td class="data new_row">4</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            0<br/>
-            240
+            2<br/>
+            347
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            77.7<br/>
-            <span class="timestamp">03:40:01 PM</span><br/>
-            70.6<br/>
-            <span class="timestamp">05:43:00 AM</span>
+            75.9<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            75.8<br/>
+            <span class="timestamp">12:02:00 AM</span>
           </td>
           <td class="data new_row">
             82.0<br/>
@@ -397,9 +397,9 @@
           <td class="units">%</td>
           <td class="data new_row">
             44<br/>
-            <span class="timestamp">11:50:02 PM</span><br/>
-            37<br/>
-            <span class="timestamp">01:17:00 AM</span>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            44<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
             44<br/>
