--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 12:04:00 AM</p>
+    <p class="lastupdate">09/18/2020 12:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.3&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">57%</td>
+        <td class="data">58%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.933 inHg (0.019)</td>
+        <td class="data">29.935 inHg (0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNW (338&#176;)</td>
+        <td class="data">2 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             69.3</span><br/>
-          <span title="12:02:04 AM">
-            69.2</span>
+          <span title="12:07:00 AM">
+            69.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:04 AM" class="loval">
-            69.2</span>
+          <span title="12:07:00 AM" class="loval">
+            69.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:04 AM">
-            53.4</span><br/>
-          <span title="12:02:04 AM">
-            53.3</span>
+          <span title="12:08:54 AM">
+            53.8</span><br/>
+          <span title="12:07:00 AM">
+            53.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:04:24 PM (Thursday)">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:04 AM">
-            57</span><br/>
+          <span title="12:08:40 AM">
+            58</span><br/>
           <span title="12:00:04 AM">
             57</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:04:00 AM">
-            29.936</span><br/>
+          <span title="12:06:00 AM">
+            29.939</span><br/>
           <span title="12:00:05 AM">
             29.926</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          347
+          326
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 9 hours, 17 minutes</td>
+      <td class="data">16 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 9 hours, 17 minutes</td>
+      <td class="data">16 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
