--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 12:09:00 AM</p>
+    <p class="lastupdate">09/18/2020 12:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -86,8 +86,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">69.3<br/>
             <span class="timestamp">12:00:04 AM</span><br/>
-            69.1<br/>
-            <span class="timestamp">12:07:00 AM</span>
+            69.0<br/>
+            <span class="timestamp">12:11:38 AM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span><br/>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">69.1<br/>
-            <span class="timestamp">12:07:00 AM</span>
+          <td class="data new_row">69.0<br/>
+            <span class="timestamp">12:11:38 AM</span>
           </td>
           <td class="data new_row">46.1<br/>
             <span class="timestamp">06:54:23 AM (Wednesday)</span>
@@ -153,8 +153,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">53.8<br/>
             <span class="timestamp">12:08:54 AM</span><br/>
-            53.2<br/>
-            <span class="timestamp">12:07:00 AM</span>
+            53.1<br/>
+            <span class="timestamp">12:11:38 AM</span>
           </td>
           <td class="data new_row">55.4<br/>
             <span class="timestamp">08:04:24 PM (Thursday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            4<br/>
-            5<br/>
-            <span class="timestamp">12:01:20 AM</span>
+            7<br/>
+            304<br/>
+            <span class="timestamp">12:10:38 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             2<br/>
-            326
+            323
           </td>
           <td class="data new_row">
             1<br/>
@@ -343,7 +343,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            207
+            208
           </td>
           <td class="data new_row">
             2<br/>
@@ -363,8 +363,8 @@
           <td class="data new_row">
             75.9<br/>
             <span class="timestamp">12:00:04 AM</span><br/>
-            75.8<br/>
-            <span class="timestamp">12:02:00 AM</span>
+            75.7<br/>
+            <span class="timestamp">12:10:00 AM</span>
           </td>
           <td class="data new_row">
             82.0<br/>
@@ -396,14 +396,14 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            44<br/>
-            <span class="timestamp">12:00:04 AM</span><br/>
+            45<br/>
+            <span class="timestamp">12:11:00 AM</span><br/>
             44<br/>
             <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
-            44<br/>
-            <span class="timestamp">11:50:02 PM (Thursday)</span><br/>
+            45<br/>
+            <span class="timestamp">12:11:00 AM (Friday)</span><br/>
             26<br/>
             <span class="timestamp">05:44:02 PM (Wednesday)</span>
           </td>
