--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 12:14:00 AM</p>
+    <p class="lastupdate">09/18/2020 12:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.1&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">57%</td>
+        <td class="data">56%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.934 inHg (0.015)</td>
+        <td class="data">29.935 inHg (0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNW (338&#176;)</td>
+        <td class="data">4 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.7&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">45%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:08:54 AM">
             53.8</span><br/>
-          <span title="12:11:38 AM">
-            53.1</span>
+          <span title="12:15:30 AM">
+            52.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:04:24 PM (Thursday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="12:08:40 AM">
             58</span><br/>
-          <span title="12:00:04 AM">
-            57</span>
+          <span title="12:15:30 AM">
+            56</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:10:38 AM">
-            7</span><br/>
-          304
+          <span title="12:14:44 AM">
+            9</span><br/>
+          330
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          2<br/>
-          323
+          3<br/>
+          327
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             75.9</span><br/>
-          <span title="12:10:00 AM">
-            75.7</span>
+          <span title="12:17:00 AM">
+            75.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 9 hours, 27 minutes</td>
+      <td class="data">16 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 9 hours, 27 minutes</td>
+      <td class="data">16 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
